--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -157,5 +157,6 @@
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
-  "C_Cpp_Runner.msvcSecureNoWarnings": false
+  "C_Cpp_Runner.msvcSecureNoWarnings": false,
+  "cmake.sourceDirectory": "/home/haniel/Projects/C++/Computer-Vision/Camera calibration/Pose Estimator"
 }
