--- a/Image Processing/App/CMakeLists.txt
+++ b/Image Processing/App/CMakeLists.txt
@@ -1,17 +1,20 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(ImgProcApp VERSION 1.0.0 LANGUAGES CXX)
+project(ImgProcApp LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package(Qt5 REQUIRED COMPONENTS Core Quick QuickControls2 Multimedia)
 find_package(OpenCV REQUIRED)
 
-add_executable(${PROJECT_NAME}
+qt5_add_resources(QML_RESOURCES qml.qrc)
+
+add_executable(ImgProcApp
     src/main.cpp
     src/backend/file_capture.cpp
     src/backend/frame.cpp
@@ -19,29 +22,18 @@ add_executable(${PROJECT_NAME}
     src/backend/file_capture.h
     src/backend/frame.h
     src/backend/thread_manager.h
+    ${QML_RESOURCES}
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE
+target_include_directories(ImgProcApp PRIVATE
     src/backend
     ${OpenCV_INCLUDE_DIRS}
 )
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(ImgProcApp
     Qt5::Core
     Qt5::Quick
     Qt5::QuickControls2
     Qt5::Multimedia
     ${OpenCV_LIBS}
 )
-
-set(QML_FILES
-    qml/main.qml
-    qml/home.qml
-    qml/showImage.qml
-    qml/showVideo.qml
-)
-
-qt5_add_resources(QML_RESOURCES qml.qrc)
-target_sources(${PROJECT_NAME} PRIVATE ${QML_RESOURCES})
-
-file(COPY ${QML_FILES} DESTINATION ${CMAKE_BINARY_DIR}/qml)
